docs: add explanations to the evaluation model output

--- a/Crop_Clasification.ipynb
+++ b/Crop_Clasification.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "hhYBoI-M6ToT"
       },
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -404,7 +404,7 @@
         "id": "ioQNzHqu7NaQ",
         "outputId": "9cc4f892-537c-488f-db2a-4da81b1f4127"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -768,7 +768,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -810,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -880,7 +880,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -931,7 +931,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -997,7 +997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "-fn9CBf4ZwmN"
       },
@@ -1009,7 +1009,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1038,7 +1038,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1673,7 +1673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1739,7 +1739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1812,7 +1812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2116,7 +2116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2151,7 +2151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "2rXa9eembWgq"
       },
@@ -2162,7 +2162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2197,7 +2197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2250,7 +2250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "qhaFGzbHVR5B"
       },
@@ -2270,7 +2270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "kto-oeZfbgVH"
       },
@@ -2299,7 +2299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "96JzIqu6VchP"
       },
@@ -2326,7 +2326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "95-jPp0xcCeO"
       },
@@ -2362,7 +2362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2398,8 +2398,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Secara ringkas, model menunjukkan kinerja yang sangat baik:\n",
+        "\n",
+        "- Akurasi 99.65%: Ini berarti model memprediksi kelas tanaman dengan benar dalam 99.65% kasus.\n",
+        "- Presisi 0.9965: Ini menunjukkan bahwa ketika model memprediksi suatu kelas, prediksi tersebut benar dalam 99.65% kasus. Ini berarti model sangat baik dalam menghindari kesalahan positif (memprediksi suatu kelas ketika sebenarnya bukan).\n",
+        "- Recall 0.9965: Ini menunjukkan bahwa model mampu mengidentifikasi 99.65% dari semua contoh yang termasuk dalam setiap kelas. Ini berarti model kita sangat baik dalam menghindari kesalahan negatif (melewatkan contoh dari suatu kelas).\n",
+        "- Skor F1 0.9964: Ini adalah ukuran gabungan dari presisi dan recall, dan skor yang tinggi menunjukkan keseimbangan yang baik antara keduanya.\n",
+        "\n",
+        "Secara keseluruhan, metrik ini menunjukkan bahwa model sangat akurat dan efektif dalam mengklasifikasikan tanaman. Ini dapat menjadi alat yang sangat berharga untuk pengambilan keputusan terkait pertanian."
+      ],
+      "metadata": {
+        "id": "tN-5MJ_DDnH5"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2433,8 +2449,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Diagonal utama (angka-angka yang dicetak tebal seperti 804, 163, 679, dan seterusnya) menunjukkan jumlah prediksi yang benar. Semakin besar angka-angka ini, semakin baik model kita dalam mengidentifikasi kelas dengan benar.\n",
+        "\n",
+        "Secara keseluruhan, berdasarkan matriks ini, dapat dilihat bahwa model kita sangat akurat, dengan sebagian besar prediksi berada di diagonal utama."
+      ],
+      "metadata": {
+        "id": "sni4ZtW5Dkui"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2522,6 +2549,25 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Laporan klasifikasi ini menunjukkan bahwa model klasifikasi memiliki kinerja yang sangat baik pada set pengujian:\n",
+        "\n",
+        "- Presisi: Untuk setiap kelas (55, 56, dan 57), presisi adalah 1.00, yang berarti bahwa semua prediksi positif untuk setiap kelas benar.\n",
+        "- Recall: Recall untuk kelas 55 dan 57 adalah 1.00, yang berarti bahwa model mengidentifikasi semua instance sebenarnya dari kelas-kelas tersebut. Recall untuk kelas 56 adalah 0.92, yang berarti bahwa model melewatkan beberapa instance sebenarnya dari kelas tersebut.\n",
+        "- Skor F1: Skor F1 adalah ukuran kinerja gabungan yang memperhitungkan presisi dan daya ingat. Skor F1 untuk kelas 55 dan 57 adalah 1.00, yang menunjukkan kinerja yang sempurna. Skor F1 untuk kelas 56 adalah 0.96, yang masih merupakan skor yang sangat baik.\n",
+        "- Dukungan: Jumlah instance sebenarnya dari setiap kelas dalam set pengujian.\n",
+        "- Akurasi: Akurasi keseluruhan model adalah 1.00, yang berarti bahwa model memprediksi dengan benar semua instance dalam set pengujian.\n",
+        "- Rata-rata makro: Rata-rata presisi, daya ingat, dan skor F1 untuk semua kelas.\n",
+        "- Rata-rata tertimbang: Rata-rata presisi, daya ingat, dan skor F1 untuk semua kelas, tertimbang berdasarkan dukungan setiap kelas.\n",
+        "\n",
+        "Secara keseluruhan, laporan klasifikasi ini menunjukkan bahwa model klasifikasi sangat akurat dan dapat diandalkan untuk memprediksi kelas instance yang tidak terlihat."
+      ],
+      "metadata": {
+        "id": "J-Lwtd0RDTB2"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "VCfXnbMCdXB6"
       },
@@ -2531,7 +2577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2564,6 +2610,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Berdasarkan hasil evaluasi model regresi tersebut, dapat disimpulkan bahwa model regresi yang kita gunakan untuk memprediksi produksi tanaman menunjukkan kinerja yang sangat baik:\n",
+        "\n",
+        "- Mean Absolute Error (MAE): 0.0245 - Rata-rata, prediksi model kita meleset sebesar 0.0245 unit (apapun satuan produksi yang digunakan) dari nilai sebenarnya. Ini adalah kesalahan yang sangat kecil, menunjukkan prediksi yang akurat.\n",
+        "- Mean Squared Error (MSE): 0.2262 - Mirip dengan MAE tetapi lebih sensitif terhadap kesalahan yang lebih besar karena kuadrat. Namun, nilai yang rendah menunjukkan kecocokan model yang baik.\n",
+        "- R-squared (R²): 0.9965 - Ini sangat tinggi, yang berarti 99,65% dari variasi dalam produksi tanaman dijelaskan oleh model kita. Ini menunjukkan kecocokan yang hampir sempurna dengan data."
+      ],
+      "metadata": {
+        "id": "njNlv8g0DMzJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "oXZG6v_OdbS3"
       },
@@ -2573,7 +2632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "0GYJoqirWP1m"
       },
@@ -2628,7 +2687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2659,6 +2718,21 @@
       "source": [
         "predict_crop(knn_classifier, knn_regressor, label_encoder, scaler)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Berdasarkan input yang diberikan (Rainfall: 400, Temperature: 40, Ph: 7), model ini memprediksi bahwa tanaman yang paling cocok adalah Jute dengan perkiraan produksi sebesar 8.96 unit.\n",
+        "\n",
+        "Prediksi ini dihasilkan oleh model KNN yang telah dilatih sebelumnya menggunakan dataset yang mencakup informasi tentang berbagai tanaman dan hasil produksinya berdasarkan faktor-faktor seperti curah hujan, suhu, dan pH tanah.\n",
+        "\n",
+        "Penting untuk diingat bahwa prediksi ini bersifat perkiraan dan mungkin tidak sepenuhnya akurat karena berbagai faktor lain yang tidak dimasukkan dalam model dapat mempengaruhi hasil produksi tanaman.\n",
+        "\n",
+        "Namun, model ini memberikan panduan yang berguna untuk pengambilan keputusan terkait penanaman tanaman berdasarkan kondisi lingkungan yang diberikan."
+      ],
+      "metadata": {
+        "id": "K2tr442HDIR8"
+      }
     }
   ],
   "metadata": {
